--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ drf-spectacular>=0.26
 mysqlclient>=2.1
 python-dotenv>=1.0
 Pillow>=10.0
+# data processing:
+numpy>=1.25
+pandas>=2.2
+openpyxl>=3.1
+# testing:
+pytest>=8.0
+coverage>=7.4
+pytest-django>=4.5
