updated the uxo_records file to match the new methodology setup

--- a/Dockerfile.gis
+++ b/Dockerfile.gis
@@ -20,6 +20,7 @@ RUN apt-get update && \
     binutils \
     libproj-dev \
     gdal-bin \
+    postgresql-client \
     libgdal-dev \
     build-essential && \
     # Now, install Python packages
