--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,17 @@
 services:
-  backend:
+  backend_gis:
     build:
       context: .
-    container_name: UXO_system_container
+      dockerfile: Dockerfile
+    container_name: uxo_system_container_azure_gis
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "echo 'INFO: Applying database migrations...' &&
+             python manage.py migrate &&
+             echo 'INFO: Starting development server...' &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - .:/UXO_system_dockerized
+      - .:/UXO_system_dockerized_gis
     ports:
-      - "8000:8000"
+      - "8001:8000"
     env_file:
-      - .env
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8.0
-    container_name: uxo_db
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST: ${MYSQL_HOST}
-      MYSQL_PORT: ${MYSQL_PORT}
-    ports:
-      - "3307:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-
-volumes:
-  db_data:
+      - .env.gis
