--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.16.0
 djangorestframework-gis==1.0.0 # ADDED for GeoJSON support
 django-filter==24.2
 django-leaflet==0.28.0
+django-htmx
 drf-spectacular==0.28.0
 et_xmlfile==2.0.0
 geopandas==0.14.3
