setup test code in citizens_reports

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,11 @@
 DJANGO_SETTINGS_MODULE = uxo_backend.settings
 python_files = tests.py test_*.py *_tests.py
 
-# reporting
-addopts = --cov=uxo_records --cov-report=html --cov-report=term-missing
+
+addopts =
+    --cov=danger_score
+    --cov=uxo_records
+    --cov=citizens_reports
+    --cov=reports
+    --cov-report=term-missing
+    --cov-report=html
