--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 
 name: Django CI
 
-# Controls when the workflow will run
+# Define the actions to run on specific events
 on:
   push:
     branches: [ "main", "master" ]
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  # This job checks code quality with flake8 and black
+  # Checking code quality with flake8 and black
   lint-and-format:
     name: Lint & Format Check
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
       - name: Run Black Check
         run: black --check .
 
-  # This job runs the test suite against the Azure database
+  # Automate running tests
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -44,8 +44,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create .env.gis file from secrets
-        # CORRECTED: This now uses your exact variable names and structure,
-        # including the DB_HOST from your secrets.
+        # Set the environment variables for the backend service
         run: |
           echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> .env.gis
           echo "DJANGO_DEBUG=${{ secrets.DJANGO_DEBUG }}" >> .env.gis
@@ -57,7 +56,6 @@ jobs:
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env.gis
 
       - name: Build and Run Backend Service
-        # We only start the single backend_gis service
         run: docker compose -f docker-compose.yml up -d --build backend_gis
 
       - name: Wait for Azure Database to be Ready
