--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,11 +13,9 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
@@ -37,7 +35,6 @@ jobs:
     name: Deploy to Azure VM
     runs-on: ubuntu-latest
     needs: build-and-push
-
     steps:
       - name: SSH and Deploy
         uses: appleboy/ssh-action@master
@@ -67,15 +64,18 @@ jobs:
             echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env.gis
             echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env.gis
 
-            # 3. CORRECTED: Log in to Azure Container Registry using sudo
+            # 3. Log in to Azure Container Registry
             sudo docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
 
-            # 4. CORRECTED: Pull the latest image using sudo
+            # 4. Pull the latest image
             sudo docker pull ${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest
             
-            # 5. CORRECTED: Run database migrations using the new image with sudo
+            # 5. Run database migrations using the new image
             sudo docker run --rm --env-file ./.env.gis ${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest python manage.py migrate --no-input
 
-            # 6. CORRECTED: Stop and start services using the production compose file with sudo
+            # 6. CORRECTED: Set the image name as an environment variable
+            export PROD_IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest
+            
+            # 7. Stop old services and start the new ones using the production compose file
             sudo docker compose -f docker-compose.prod.yml down
             sudo docker compose -f docker-compose.prod.yml up -d
