--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,9 +13,11 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
@@ -35,6 +37,7 @@ jobs:
     name: Deploy to Azure VM
     runs-on: ubuntu-latest
     needs: build-and-push
+
     steps:
       - name: SSH and Deploy
         uses: appleboy/ssh-action@master
@@ -73,9 +76,7 @@ jobs:
             # 5. Run database migrations using the new image
             sudo docker run --rm --env-file ./.env.gis ${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest python manage.py migrate --no-input
 
-            # 6. CORRECTED: Set the image name as an environment variable
-            export PROD_IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest
-            
-            # 7. Stop old services and start the new ones using the production compose file
-            sudo docker compose -f docker-compose.prod.yml down
-            sudo docker compose -f docker-compose.prod.yml up -d
+            # 6. Define the environment variable on the same line as the docker compose command
+            # This ensures the variable is available to the sudo environment.
+            sudo PROD_IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest docker compose -f docker-compose.prod.yml down
+            sudo PROD_IMAGE_NAME=${{ secrets.ACR_LOGIN_SERVER }}/uxo-system-backend:latest docker compose -f docker-compose.prod.yml up -d
